# assignment-2-procrastinator-trifecta-2

./: Main.hs  README.md  hotel-analysis.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
