cabal-version:       2.4
name:                hotel-analysis
version:             1.0.0.0
author:              Team
license:             MIT
build-type:          Simple

executable hotel-analysis
  main-is:             Main.hs
  build-depends:       base >=4.14 && <5,
                       csv >=0.1.2
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall